--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,11 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.9.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.40</version>
+        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
@@ -75,6 +79,7 @@
         </dependency>
     </dependencies>
 
+    
     <build>
         <plugins>
             <plugin>
